# deply

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  _config.yml  deply.yaml.example  index.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
deply/: code_analyzer.py  config_parser.py  config_validator.py  deply_runner.py  main.py
deply/collectors/: __init__.py  base_collector.py  collector_factory.py  decorator_usage_collector.py  directory_collector.py
deply/diagrams/: marmaid_diagram_builder.py
deply/models/: layer.py  violation.py  violation_types.py
deply/reports/: report_generator.py
deply/reports/formats/: github_actions_report.py  json_report.py  text_report.py
deply/rules/: __init__.py  base_rule.py  external_import_rule.py  rule_factory.py
deply/utils/: ast_utils.py  dependency_visitor.py  ignore_parser.py
doc/: README.md  cli.md  collectors.md  configuration.md  features.md  getting-started.md  mermaid.md  rules.md  skills.md
skills/deply-config/: SKILL.md
tests/: test.py  test_ast_utils.py  test_bool_rule.py  test_class_method_call_violation.py  test_collector_factory.py  test_collectors.py  test_collectors_edge_cases.py  test_config_validator.py  test_dependency_visitor.py  test_deply_runner.py  test_external_import_rule.py  test_false_dependency_path.py  test_function_decorator_usage_rule.py  test_ignore_parser.py  test_main_and_config_parser.py  test_models.py  test_reports.py  test_rule_factory.py  test_rule_violation_payloads.py  test_rules.py
(+10 files in other folders)
