[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[tool.mutmut]
paths_to_mutate = [
    "deply/deply_runner.py",
    "deply/utils/dependency_visitor.py",
    "deply/rules/",
]
also_copy = ["deply/"]
mutate_only_covered_lines = true
pytest_add_cli_args_test_selection = ["tests"]
